# lifechange

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1e3fdb966f0c_initial_migration.py  36d339db9b56_update_user_schema.py  3815f4746582_initial_migration.py  3828f1e635de_update_user_schema.py  42150fd65000_initial_schema.py  67583ff4c201_update_tasks_schema.py  7dccca41e815_initial.py
app/: admin.py  config.py  database.py  main.py
app/auth/: manager.py  routes.py  schemas.py  user_db.py
app/db/: database.py  session.py
app/models/: __init__.py  events.py  task.py  task_answer.py  task_option.py  user.py  user_task_answer.py
app/tasks/: routes.py  schemas.py
app/users/: routes.py  schemas.py
i18n/: rus.yml
models/: user.py
