[tool.poetry]
name = "lifechange-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.2.0"
fastapi-users = {version = "^14.0.1", extras = ["sqlalchemy"]}
fastapi-users-db-sqlalchemy = "^7.0.0"
sqladmin = "^0.20.1"
alembic = "^1.15.2"
itsdangerous = "^2.2.0"
python-multipart = "^0.0.20"
